[package]
name = "jsonwebtoken-rustcrypto"
version = "1.0.0"
authors = ["Joel Ellis <joel@ellis.link>"]
license = "MIT"
readme = "README.md"
description = "Create and decode JWTs in a strongly typed way, using crypto primatives from the RustCrypto proejct."
homepage = "https://github.com/JoelEllis/jsonwebtoken"
repository = "https://github.com/JoelEllis/jsonwebtoken"
keywords = ["jwt", "web", "api", "token", "jwk"]
edition = "2021"
include = ["src/**/*", "tests/**/*", "LICENSE", "README.md", "CHANGELOG.md"]


# [features]
# default = ["rsa_keys"]
# rsa_keys = ["rsa", "rand_core", "sha2"]

[dependencies]
serde_json = "1.0.75"
serde = { version = "1.0.134", features = ["derive"] }

base64 = "0.13.0"

rand_core = "0.6.3"

rsa = "0.5.0"
sha2 = "0.10.1"

hmac = "0.12.0"
subtle = "2.4.1"
crypto-mac = "0.11.1"

[dev-dependencies]
# For the custom chrono example
chrono = "0.4.19"
criterion = "0.3.5"
reqwest = { version = "0.11.9", features = ["blocking", "json"] }

[[bench]]
name = "jwt"
harness = false

[badges]
maintenance = { status = "passively-maintained" }
