[package]
name = "jsonwebtoken-rustcrypto"
version = "1.2.0"
authors = ["Jade Ellis <jade@ellis.link>"]
license = "MIT"
readme = "README.md"
description = "Create and decode JWTs in a strongly typed way, using crypto primatives from the RustCrypto proejct."
homepage = "https://github.com/JadedBlueEyes/jsonwebtoken"
repository = "https://github.com/JadedBlueEyes/jsonwebtoken"
keywords = ["jwt", "web", "api", "token", "jwk"]
edition = "2021"
# include = ["src/**/*", "tests/**/*", "LICENSE", "README.md", "CHANGELOG.md"]


# [features]
# default = ["rsa_keys"]
# rsa_keys = ["rsa", "rand_core", "sha2"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

base64 = "0.21.0"

rand_core = { version = "0.6", default-features = false }
rand = { version = "0.8", default-features = false, features = ["std_rng", "std"] }

rsa = "0.8"
sha2 = { version = "0.10.6", features = ["oid"] }

hmac = "0.12.1"
subtle = "2.4.1"
crypto-mac = "0.11.1"

[dev-dependencies]
# For the custom chrono example
chrono = "0.4.19"
criterion = "0.3.5"
reqwest = { version = "0.11.9", features = ["blocking", "json"] }

# Test interop with the original.
jsonwebtoken = "8.3.0"

[[bench]]
name = "jwt"
harness = false

[badges]
maintenance = { status = "passively-maintained" }
